Moved into proper jekyll page structure, css into file, etc.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <title>Title</title>
+  <title>{{subtitle}} - 10after10.com</title>
+
+  <link rel="stylesheet" href="css/10after10.css">
 
 </head>
 <body>
